--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///tmp/st, file:///home/auii/Projects/twemoji/assets/svg
-lastVisited=file:///home/auii/Projects/twemoji/assets/svg
-qtVersion=5.15.2
+history=file:///home/auii/Projects/twemoji/assets/svg, file:///home/auii/Documents/Resources, file:///home/auii/Documents/Resources/fk, file:///home/auii/Documents/Resources/Biology, file:///home/auii/Documents/Resources/Spiriual
+lastVisited=file:///home/auii/Documents/Resources
+qtVersion=5.15.3
 shortcuts=file:, file:///home/auii
 sidebarWidth=83
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xb5\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xe1\0\0\0\x1\0\0\0\0\0\0\0\x39\0\0\0\x1\0\0\0\0\0\0\0\x39\0\0\0\x1\0\0\0\0\0\0\0\x62\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x3\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\xcb\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\xf7\0\0\0\x1\0\0\0\0\0\0\0\x39\0\0\0\x1\0\0\0\0\0\0\0\x39\0\0\0\x1\0\0\0\0\0\0\0\x62\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
