--- a/fcitx/rime/user.yaml
+++ b/fcitx/rime/user.yaml
@@ -1,2 +1,6 @@
 var:
-  last_build_time: 1653123834
+  last_build_time: 1660482811
+  previously_selected_schema: openfly
+  schema_access_time:
+    numbers: 1660483938
+    openfly: 1660483944
