--- a/x2ray/v2ray_cli/config.json
+++ b/x2ray/v2ray_cli/config.json
@@ -65,11 +65,11 @@
             "settings": {
                 "vnext": [
                     {
-                        "address": "la-detour-05.wallthefool.org",
-                        "port": 15505,
+                        "address": "hkt-detour-01.wallthefool.org",
+                        "port": 15101,
                         "users": [
                             {
-                                "alterId": 2,
+                                "alterId": 0,
                                 "id": "ddc10532-412d-4e19-89c9-50b2cbbad356",
                                 "level": 8,
                                 "security": "auto"
